# insertdb

./: Cargo.toml  bmpconvert.sh  test.sh
src/: db.rs  envvars.rs  main.rs  types.rs
