[package]
name = "insertdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
rusqlite = { version = "0.29.0", features = ["bundled"] }
env_logger = "0.10.1"
log = "0.4.20"
walkdir = "2.3.2"
image = "0.23.1"
img_hash = "3.2.0"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]
